packages/webassemblyjs/test/fixtures/type-errors/br_if-1/module.wast
(module (func (block (br_if 0 (f32.const 0)))))
